@startuml "Class diagram"

class FoocleBusiness {
  - name: String
  - businessEmail: String
  - businessPhone: Phone
  - address: Location
  - cvr: String
  - description: String
  - foocleSpots: List<FoocleSpot>
  - reviews: List<Review>
  - accounts: List<FoocleBusinessAccount>
  - createdAt: LocalDateTime
  - updatedAt: LocalDateTime
}

class Account {
  - firstname: String
  - lastname: String
  - email: String
  - phone: Phone
  - description: String
  - password: String
  - notifications: NotificationHistory
  - createdAt: LocalDateTime
  - updatedAt: LocalDateTime
}

class BusinessAccount {
  - account: Account
  - FoocleBusinessId: String
  - isAdmin: boolean
}

class FoocleScout {
  - account: Account
  - reviews: List<Review>
}

class Phone {
  - number: String
  - areaCode: String
}

class FoocleSpot {
  - id: long
  - contractPerson: BusinessAccount
  - menues: List<SpotMenu>
  - location: Location
  - businessId: String
  - createdAt: LocalDateTime
  - updatedAt: LocalDateTime
}

enum FoodPrefence {
  VEGAN
  VEGETARIAN
  PESCETAR
  FLEXITAR
  POLLOTAR
}

class SpotMenu {
  - id: long
  - description: String
  - pictures: List<String>
  - foodPrefences: Set<FoodPrefence>
  - createdAt: LocalDateTime
  - updatedAt: LocalDateTime
  - pickupTimeFrom: LocalDateTime
  - pickupTimeTo: LocalDateTime
}

class Location {
  - address: String
  - city: String
  - zipCode: String
  - country: String
}

enum ScoutRequestStatus {
  PENDING
  DENIED
  ACCEPTED
  CANCELED 
}

class ScoutRequest {
  - id: long
  - scoutId: long
  - menuId: long
  - status: ScoutRequestStatus
  - optionalMsg: String
}

class RequestHistory {
  - requests: LinkedList<ScoutRequest>
}

class Review {
  - id: long
  - requestId: long
  - locacation: Location
  - businessId: String
  - rating: float
  - description: String
}

class Notification {
  - id: long
  - requestId: long
  - msg: String
  - createdAt: LocalDateTime
}

class NotificationHistory {
  - id: long
  - notifications: List<Notifaction>
}

Location *-- Review
FoocleBusiness *-- Review
FoocleScout *-- Review

FoocleScout --* Account
BusinessAccount --* Account
Phone *-- Account

RequestHistory *-- FoocleScout

SpotMenu *-- ScoutRequest
ScoutRequestStatus *-- ScoutRequest
RequestHistory *-- ScoutRequest
 
SpotMenu --* FoodPrefence

FoocleSpot *-- SpotMenu
FoocleBusiness *-- FoocleSpot

Account --* Location
FoocleBusiness --* Location
FoocleSpot --* Location

FoocleBusiness *-- BusinessAccount

FoocleSpot --* BusinessAccount

Notification *-- ScoutRequest
NotificationHistory *-- Notification
Account *-- NotificationHistory

@enduml
@enduml